--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "AppsMovie",
     "slug": "AppsMovie",
     "version": "1.0.0",
+    "assetBundlePatterns": [
+      "./assets/poppins.ttf"
+    ],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
