Melakukan penambahan detail, search, genre list, movie list by genre, dan bookmark. Bookmark menggunakan database asyncStorage dan fitur lainnya adalah hasil API dengan fetch async

--- a/app.json
+++ b/app.json
@@ -21,13 +21,20 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.irsjrhr.AppsMovie"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8d5ead8a-0416-47fc-85ed-4c1305559fbd"
+      }
+    },
+    "owner": "irsjrhr"
   }
 }
