--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.14",
@@ -18,6 +19,7 @@
     "react-native": "0.74.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
